<resources>
    <string name="app_name">myprog</string>
    <string name="steptocreateweb">
    <br>
        RECOMENDATIONS \n</br>
        <br>
            1.If your savings are less than1000-do not invest \n</br>
        <br>
            2.If your savings are 2000-5000 - invest 5% of your savings \n</br>
        <br>
            3.If your savings are 5000-10000 - invest 10% of your savings \n</br>
        <br>
            4.In all other cases you can invest 20% of your savings \n</br>
    </string>
    <string name="your_savings">Your savings</string>
    <string name="https_finviz_com_https_in_tradingview_com_https_in_finance_yahoo_com">https://finviz.com/ https://in.tradingview.com/ https://in.finance.yahoo.com/</string>
    <string name="the_amount_of_investement_is_savings_of_investement_100">The amount of investement is- ((savings*( % of investement))/100)</string>
    <string name="click_on_links_to_invest">click on links to invest</string>
    <string name="enter_amount_of_investement">ENTER % AMOUNT OF INVESTEMENT</string>
</resources>
