<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192a56"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enter savings"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/your_savings"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/holo_red_dark"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:layout_below="@id/button"
        android:layout_centerVertical="false"
        android:layout_marginTop="9dp"
        android:background="@android:color/darker_gray"
        android:text="@string/steptocreateweb"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="152dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_below="@id/editText3"
        android:layout_marginTop="211dp"
        android:autoLink="all"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/https_finviz_com_https_in_tradingview_com_https_in_finance_yahoo_com"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:layout_below="@id/enter savings"
        android:layout_marginTop="65dp"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:text="@string/enter_amount_of_investement"
        android:textColor="#1E88E5"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="39dp"
        android:text="@string/click_on_links_to_invest"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_below="@id/editText3"
        android:layout_marginTop="38dp"
        android:background="@android:color/white"
        android:text="@string/the_amount_of_investement_is_savings_of_investement_100"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        android:textStyle="normal|bold" />
</RelativeLayout>